--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^6.5.95",
+    "@nuxt/types": "~2.15.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.12.3",
