--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     image: talebook/talebook
     volumes:
       - /tmp/demo:/data
+      - G:\obsidian\metadata\talebook\app\public\logo:/data/books/logo/  # 新增 Logo 挂载
     ports:
       - "8080:80"
       - "8443:443"
